--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,11 +1,13 @@
+
 a{
     text-decoration: none;
-    color: gray;
+    color: rgb(28, 25, 25);
 }
 .header{
     background-color: aquamarine;
     text-align: justify;
     width: 100%;
+    margin: 0 0 0 0;
 }
 .container{
     width: 60%;
@@ -26,6 +28,12 @@ a{
 ul{
     list-style: none;
 }
-.img-responsive{
-    
-}
+.otdeleniya{
+    padding-bottom: 100px;
+  }
+  .otdeleniya-list{
+    display: flex;
+    justify-content:space-between;
+    text-align: center;
+    margin-bottom: 0%;
+  }
